Borrower get and post working

--- a/borrowers/src/main/resources/application.properties
+++ b/borrowers/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+server.port=8081
+spring.data.cassandra.keyspace-name=demo
+spring.data.cassandra.contact-point=localhost
+spring.data.cassandra.local-datacenter=datacenter1
+spring.data.cassandra.schema.action=CREATE_IF_NOT_EXISTS
