--- a/transactions/pom.xml
+++ b/transactions/pom.xml
@@ -36,6 +36,12 @@
 			<artifactId>reactor-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.2.3</version>
+			<!--            <scope>test</scope>-->
+		</dependency>
 	</dependencies>
 
 	<build>
