--- a/borrowers/src/main/resources/application.properties
+++ b/borrowers/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 server.port=8081
+
+spring.data.cassandra.port=9042
 spring.data.cassandra.keyspace-name=demo
-spring.data.cassandra.contact-point=localhost
+spring.data.cassandra.contact-points=localhost
 spring.data.cassandra.local-datacenter=datacenter1
-spring.data.cassandra.schema.action=CREATE_IF_NOT_EXISTS
+spring.data.cassandra.schema-action=CREATE_IF_NOT_EXISTS
