discovery and gateway working

--- a/borrowers/src/main/resources/application.properties
+++ b/borrowers/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-server.port=8081
+server.port=0
+
+spring.application.name=borrowers
 
 spring.data.cassandra.port=9042
 spring.data.cassandra.keyspace-name=demo
