--- a/lenders/src/main/resources/application.properties
+++ b/lenders/src/main/resources/application.properties
@@ -1,5 +1,8 @@
-server.port=8080
-spring.data.cassandra.keyspace-name=lenders
+server.port=0
+
+spring.application.name=lenders
+
+spring.data.cassandra.keyspace-name=demo
 spring.data.cassandra.contact-points=localhost
-spring.data.cassandra.schema.action=CREATE_IF_NOT_EXISTS
+spring.data.cassandra.schema-action=CREATE_IF_NOT_EXISTS
 spring.data.cassandra.local-datacenter=datacenter1
