--- a/transactions/src/main/resources/application.properties
+++ b/transactions/src/main/resources/application.properties
@@ -1,6 +1,9 @@
-server.port=8080
+server.port=0
+
+spring.application.name=transactions
+
 spring.data.cassandra.keyspace-name=demo
 spring.data.cassandra.contact-points=localhost
 spring.data.cassandra.local-datacenter=datacenter1
-spring.data.cassandra.schema-actions=CREATE_IF_NOT_EXISTS
+spring.data.cassandra.schema-action=CREATE_IF_NOT_EXISTS
 
