--- a/borrowers2/src/main/resources/application.properties
+++ b/borrowers2/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=0
-spring.application.name=transactions
+spring.application.name=borrowers2
 spring.data.cassandra.keyspace-name=application
 spring.data.cassandra.contact-points=localhost
+spring.data.cassandra.schema-action=CREATE_IF_NOT_EXISTS
 spring.data.cassandra.local-datacenter=datacenter1
-spring.data.cassandra.schema-actions=CREATE_IF_NOT_EXISTS
