--- a/borrowers3/src/main/resources/application.properties
+++ b/borrowers3/src/main/resources/application.properties
@@ -1,8 +1,6 @@
 server.port=0
-
-spring.application.name=lenders
-
-spring.data.cassandra.keyspace-name=demo
+spring.application.name=borrowers3
+spring.data.cassandra.keyspace-name=application
 spring.data.cassandra.contact-points=localhost
 spring.data.cassandra.schema-action=CREATE_IF_NOT_EXISTS
 spring.data.cassandra.local-datacenter=datacenter1
