--- a/lenders/pom.xml
+++ b/lenders/pom.xml
@@ -62,6 +62,13 @@
             <scope>compile</scope>
         </dependency>
 
+		<dependency>
+			<groupId>com.intuit.karate</groupId>
+			<artifactId>karate-junit5</artifactId>
+			<version>1.1.0</version>
+			<scope>test</scope>
+		</dependency>
+
     </dependencies>
 	<dependencyManagement>
 		<dependencies>
@@ -76,6 +83,17 @@
 	</dependencyManagement>
 
 	<build>
+
+		<testResources>
+			<testResource>
+				<directory>src/test/java</directory>
+				<excludes>
+					<exclude>**/*.java</exclude>
+				</excludes>
+			</testResource>
+		</testResources>
+
+
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
@@ -88,6 +106,11 @@
 						</exclude>
 					</excludes>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.2</version>
 			</plugin>
 		</plugins>
 	</build>
